Started projects page

--- a/resources/projects.json
+++ b/resources/projects.json
@@ -13,7 +13,8 @@
           "link": "lab2/lab2.html"
        },
        {
-         "name":"Lab 10",
+         "name":"Testing",
+         "year": "2000",
          "caption": "Production",
          "link": "lab10/lab10.html"
        }
