--- a/resources/projects.json
+++ b/resources/projects.json
@@ -6,18 +6,18 @@
           "caption": "Brand website for small clothes consignment business. <br><br> Helped a small business owner build a website that serves as a spot for other small reselling businesses to get advice. Also established a place for all of the owner's socials and online shop links.",
           "link": "https://gracieshanger.github.io/"
        },
-       {
-          "name": "Distance Field Calculator",
-          "year": "2023",
-          "caption": "For a Data Structures project in C++, created a distance field calculating program. <br><br> Given a black and white image, developed an efficient program designed to calculate the closest distance any given white pixel was to a black pixel. Optimization for this project focused on using a priortiy queue to contain pixels. (Code from class is not to be shared online. Contact me for more information.)",
-          "link": "javascript:void(0)"
-       },
-       {
-          "name": "Hockey Game Statistic Organizer",
-          "year": "2023",
-          "caption": "Organized 7500+ rows of hockey game data for a Data Structures project using C++. <br><br> Utilizing object oriented programming and information architecture, created an algorithm that sorts a given database of hockey games based on specific commands (i.e. by players, by teams, or by penalties). (Code from class is not to be shared online. Contact me for more information.)",
-          "link": "javascript:void(0)"
-       },
+    //    {
+    //       "name": "Distance Field Calculator",
+    //       "year": "2023",
+    //       "caption": "For a Data Structures project in C++, created a distance field calculating program. <br><br> Given a black and white image, developed an efficient program designed to calculate the closest distance any given white pixel was to a black pixel. Optimization for this project focused on using a priortiy queue to contain pixels. (Code from class is not to be shared online. Contact me for more information.)",
+    //       "link": "javascript:void(0)"
+    //    },
+    //    {
+    //       "name": "Hockey Game Statistic Organizer",
+    //       "year": "2023",
+    //       "caption": "Organized 7500+ rows of hockey game data for a Data Structures project using C++. <br><br> Utilizing object oriented programming and information architecture, created an algorithm that sorts a given database of hockey games based on specific commands (i.e. by players, by teams, or by penalties). (Code from class is not to be shared online. Contact me for more information.)",
+    //       "link": "javascript:void(0)"
+    //    },
        {
           "name": "Windows Dynamic Wallpaper",
           "year": "2022",
